version 2021b, in progress
- gdtb data format: make the new variant the default
- tighten up on defbundle() syntax: no empty arguments
  allowed

2021-01-18, version 2021a
- New function vma() for multiple time series
- quantile(): support variant methods Q7 and Q8 described
  in Hyndman and Fan (1996)
- defbundle(): add two shorthand variants of this function
- irf(): support calculation of multiple impulse responses
  in a single call (with internal speed-up)
- irf() bug-fix: failing to compute bootstrap confidence band
  correctly when passed a $system bundle argument
- VAR internals: scrap augmented Cholesky matrix; so the
  $system.C accessor is now a square matrix
- $system bundle: ensure presence of xlist member, and
  include the command-word (var, vecm or system)
- mread(): support reading gdt and gdtb files as matrices
- readfile(): support reading gzipped files transparently
- obslabel(): support a vector of observations
- nls/mle/gmm blocks: support use of printf statements
- "open" command: support reading selected series from
  native gretl datafiles (gdt, gdtb)
- "join" command: support $obsmajor, $obsminor as outer keys
- "coint2" command: rename as "johansen"
- "freq" and "xtab" for string-valued series: don't let
  non-ASCII characters break the formatting
- Gretl User's Guide: add links to download example scripts
- Reorganize the categories for the functions help file
- Fix obscure problem with plots: inability to show markers
  for observations in some cases where this should be OK
- Fix memory leak on deleting a series with descriptive
  label attached
- Fix excessive messaging on renaming series in a loop, a
  serious issue if the dataset contains very many series
- Fix breakage in handling of boolean comparisons involving
  missing values
- Fix bug: potential crash on "Save as icon and close" for
  a model displayed in tabbed model viewer
- Fix bug: possible crash on confusion between singleton
  array and array element within a loop